--- a/Organizador/src/main/res/values/strings.xml
+++ b/Organizador/src/main/res/values/strings.xml
@@ -1,3 +1,7 @@
 <resources>
     <string name="app_name">AECOL86</string>
+    <string name="Ac_login_txt_email">Email</string>
+    <string name="Ac_login_txt_password">Contraseña</string>
+    <string name="Ac_login_txt_conectarse">Conectarse</string>
+    <string name="Ac_login_txt_registrarse">Registrarse</string>
 </resources>
