--- a/Organizador/src/main/res/values/strings.xml
+++ b/Organizador/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="Ac_login_txt_password">Contraseña</string>
     <string name="Ac_login_txt_conectarse">Conectarse</string>
     <string name="Ac_login_txt_registrarse">Registrarse</string>
+    <string name="activity_login_error_message">Error al iniciar sesión</string>
 </resources>
