--- a/Estudiante/src/main/res/values/strings.xml
+++ b/Estudiante/src/main/res/values/strings.xml
@@ -41,4 +41,5 @@
     <string name="menu_mi_informacion">Mis datos</string>
     <string name="menu_about_us">Sobre nosotros</string>
     <string name="menu_checklist">Cosas por hacer al momento de mi llegada</string>
+    <string name="menu_contacto">Contactanos</string>
 </resources>
