--- a/Estudiante/src/main/res/values/strings.xml
+++ b/Estudiante/src/main/res/values/strings.xml
@@ -55,5 +55,10 @@
     <string name="CheckList_11">Adquiero mi pase de bus en la red de Vitalis.</string>
     <string name="CheckList_12">Me inscribo al Consulado de Colombia en París en el siguiente link:
 https://www.cancilleria.gov.co/registro-consular</string>
+    <string name="about_us">Somos una asociación constituida principalmente por estudiantes que queremos compartir las experiencias adquiridas durante nuestra estadía en Francia .
+
+        \n\nTenemos por objeto la promoción y la integración de la cultura colombiana en Poitiers, así como ser un centro de ayuda y apoyo a los estudiantes de nacionalidad colombiana que realicen intercambio en Poitiers .
+
+        \n\nEl interés principal de la asociación es facilitar el inicio de la vida cotidiana poitevina y académica francesa.</string>
 
 </resources>
