--- a/Estudiante/src/main/res/values/strings.xml
+++ b/Estudiante/src/main/res/values/strings.xml
@@ -60,5 +60,6 @@ https://www.cancilleria.gov.co/registro-consular</string>
         \n\nTenemos por objeto la promoción y la integración de la cultura colombiana en Poitiers, así como ser un centro de ayuda y apoyo a los estudiantes de nacionalidad colombiana que realicen intercambio en Poitiers .
 
         \n\nEl interés principal de la asociación es facilitar el inicio de la vida cotidiana poitevina y académica francesa.</string>
+    <string name="mensaje_ofii">Doy certeza que traigo conmigo el documento de la OFII (Demande d\'Attestation OFII)</string>
 
 </resources>
