Cambio menu NavigationDrawer

--- a/Estudiante/src/main/res/values/strings.xml
+++ b/Estudiante/src/main/res/values/strings.xml
@@ -40,7 +40,7 @@
     <string name="menu_send">Send</string>
     <string name="menu_mi_informacion">Mis datos</string>
     <string name="menu_about_us">Sobre nosotros</string>
-    <string name="menu_checklist">Cosas por hacer</string>
+    <string name="menu_checklist">Al momento de mi llegada</string>
     <string name="menu_contacto">Contactanos</string>
     <string name="CheckList_1">Solicito las llaves de mi residencia CROUS y una ​ attestation d\'hébergement CAF </string>
     <string name="CheckList_2">Me presento a la oficina de relaciones internacionales de mi Universidad con el pasaporte​ y la ​ Demande d’Attestation ​ OFII​ para validar mi estadía.</string>
