--- a/Estudiante/src/main/res/values/strings.xml
+++ b/Estudiante/src/main/res/values/strings.xml
@@ -62,5 +62,6 @@ https://www.cancilleria.gov.co/registro-consular</string>
         \n\nEl interés principal de la asociación es facilitar el inicio de la vida cotidiana poitevina y académica francesa.</string>
     <string name="mensaje_ofii">Doy certeza que traigo conmigo el documento de la OFII (Demande d\'Attestation OFII)</string>
     <string name="CheckList_13">Me suscribo a la asociación (10 euros)</string>
+    <string name="telefonos_iguales">Error, los numero de telefono deben ser distintos</string>
 
 </resources>
