Creation no estudiante NavigationDrawer

--- a/Estudiante/src/main/res/values/strings.xml
+++ b/Estudiante/src/main/res/values/strings.xml
@@ -65,5 +65,7 @@ https://www.cancilleria.gov.co/registro-consular</string>
     <string name="telefonos_iguales">Error, los numero de telefono deben ser distintos</string>
     <string name="menu_gastos">Gastos al llegar a Francia</string>
     <string name="menu_organizadores">Lista de organizadores</string>
+    <string name="title_activity_navigation_otro">NavigationOtro</string>
+    <string name="action_settings">Settings</string>
 
 </resources>
