--- a/Estudiante/src/main/res/values/strings.xml
+++ b/Estudiante/src/main/res/values/strings.xml
@@ -67,5 +67,6 @@ https://www.cancilleria.gov.co/registro-consular</string>
     <string name="menu_organizadores">Lista de organizadores</string>
     <string name="title_activity_navigation_otro">NavigationOtro</string>
     <string name="action_settings">Settings</string>
+    <string name="menu_checklist_otro">Procesos a hacer</string>
 
 </resources>
